--- a/currency-service/src/main/resources/static/index.html
+++ b/currency-service/src/main/resources/static/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Currency API</title>
-	<meta name="description" content=""/>
-	<meta name="viewport" content="width=device-width"></meta>
-	<base href="/">
-	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstram.min.js">
-	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+<meta charset="UTF-8">
+<title>Currency API</title>
+<meta name="description" content="" />
+<meta name="viewport" content="width=device-width"></meta>
+<base href="/">
+<link rel="stylesheet" type="text/css"
+	href="/webjars/bootstrap/css/bootstram.min.js">
+<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+<script type="text/javascript"
+	src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Currency API</h1>
-<div class="container"></div>
+	<h1>Login</h1>
+	<div class="container unauthenticated">
+		<a href="/oauth2/authorization/github">Login via Github</a>
+	</div>
+	<div class="container authenticated" style="display: none;">
+		Logged in as <span id="user"></span>
+		<div><button onclick="logout()" class="btn btn-primary">Logout</button></div>
+	</div>
+	<script type="text/javascript" src="/webjars/js-cookie/js.cookie.js"></script>
+	<script type="text/javascript">
+		$.ajaxSetup({
+			beforeSend : function(xhr, settings) {
+				if(settings.type == 'POST'|| settings.type=='PUT' || settings.type == 'DELETE') {
+					if(!(/^http:.*/.test(settings.url)|| /^https:.*/.test(settings.url))) {
+						xhr.setRequestHeader("X-XSRF-TOKEN",Cookies.get('XSRF-TOKEN'))
+					}
+				}
+			}
+		});
+		$.get("/user",function(data){
+			$("#user").html(data.name);
+			$(".unauthenticated").hide();
+			$(".authenticated").show();
+		})
+		var logout = function()  {
+			$.post("/logout",function(){
+				$("#user").html('');
+				$(".unauthenticated").show();
+				$(".authenticated").hide();
+			})
+			return true;
+		}
+	</script>
 </body>
 </html>
