--- a/currency-service/src/main/resources/static/index.html
+++ b/currency-service/src/main/resources/static/index.html
@@ -14,8 +14,12 @@
 </head>
 <body>
 	<h1>Login</h1>
+	<div class="container text-danger error"></div>
 	<div class="container unauthenticated">
 		<a href="/oauth2/authorization/github">Login via Github</a>
+	</div>
+	<div class="container unauthenticated">
+		<a href="/oauth2/authorization/google">Login via Google</a>
 	</div>
 	<div class="container authenticated" style="display: none;">
 		Logged in as <span id="user"></span>
@@ -36,6 +40,13 @@
 			$("#user").html(data.name);
 			$(".unauthenticated").hide();
 			$(".authenticated").show();
+		})
+		$.get("/error",function(data){
+			if(data){
+				$("error").html(data)
+			} else {
+				$("error").html('')
+			}
 		})
 		var logout = function()  {
 			$.post("/logout",function(){
